# Coursework_3

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/: data.json
src/: abs_classes.py  api_class.py  config.py  create_database.py  db_manager.py  interaction.py  interaction_api.py  utils.py
tests/: test_api_class.py
