[tool.poetry]
name = "pythonproject6"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.2.0"
mypy = "^1.15.0"
black = "^25.1.0"
isort = "^6.0.1"


[tool.poetry.group.dev.dependencies]
requests = "^2.32.3"
psycopg2 = "^2.9.10"
pytest-cov = "^6.1.1"
psycopg2-binary = "^2.9.10"
types-psycopg2 = "^2.9.21.20250516"
types-requests = "^2.32.0.20250515"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
